source/overlay/index.css
.lindy-page-settings-topright,
.lindy-page-settings-pageadjacent {
    --background-color: white;
    --text-color: #374151;
    --color-muted: #9ca3af;
}

.lindy-page-settings-topright {
    position: fixed !important;
    top: 0;
    right: 0;
    z-index: 300;
    padding: 9px;

    display: flex;
    flex-direction: column;
    /* align-items: flex-end; */
    gap: 5px;
}

.lindy-page-settings-pageadjacent {
    position: absolute !important;
    top: 7px;
    left: calc(
        (100vw - var(--lindy-pagewidth)) / 2 + var(--lindy-pagewidth) - 5px
    );
    z-index: 300;
    padding: 10px;

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    gap: 5px;
}
#lindy-domain-switch-icon-container.lindy-domain-switch-wiggle > svg {
    animation: wiggle 0.6s ease-in-out;
}
@keyframes wiggle {
    0% {
        transform: rotate(10deg);
    }
    25% {
        transform: rotate(-20deg);
    }
    50% {
        transform: rotate(10deg);
    }
    75% {
        transform: rotate(-10deg);
    }
    100% {
        transform: rotate(0deg);
    }
}

.lindy-page-settings-topright > a {
    text-decoration: none !important;
    border: none !important;
}

.lindy-ui-icon {
    width: 20px;
    height: 20px;
    padding: 3px;
    cursor: pointer;
    box-sizing: content-box !important;
    color: var(--color-muted) !important;
    overflow: visible;
}
svg.lindy-ui-icon > path {
    fill: currentColor;
    stroke: currentColor;
    stroke-width: 10px;
}
svg.lindy-ui-icon#lindy-theme-icon > path {
    stroke-width: 20px;
}
.lindy-tooltip:hover > .lindy-ui-icon, 
.lindy-theme-popup-container:hover > .lindy-ui-icon {
    color: var(--text-color) !important;
    filter: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));
}

/* setup tooltips */
.lindy-tooltip {
    position: relative;
}
.lindy-tooltip:before,
.lindy-tooltip:after {
    position: absolute;
    display: block;
    pointer-events: none;

    opacity: 0;
}
.lindy-tooltip:before {
    /* box */
    top: 0px;
    right: calc(100% + 6px);
    padding: 4px 8px;

    display: block;
    content: attr(data-title);
    font-size: 13px;

    background: var(--background-color);
    color: var(--text-color);
    border-radius: 5px;
    white-space: nowrap;
    filter: drop-shadow(0 1px 1px rgb(0 0 0 / 0.05));

    font-family: Poppins, sans-serif;
    font-weight: 600;
}
.lindy-tooltip:after {
    /* arrow */
    top: 7px;
    right: calc(100% - 0px);
    height: 0;
    width: 0;
    content: "";

    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-left: 6px solid var(--background-color);
}

.lindy-tooltip.lindy-fade:after,
.lindy-tooltip.lindy-fade:before {
    transform: translate3d(10px, 0, 0);
    transition: all 0.15s ease-in-out;
}
.lindy-tooltip.lindy-fade:hover:after,
.lindy-tooltip.lindy-fade:hover:before {
    opacity: 1;
    transform: translate3d(0, 0, 0);
}

.lindy-tooltip-reverse:before {
    right: unset;
    left: calc(100% + 4px);
    transform: translate3d(-10px, 0, 0) !important;

    line-height: 1.3;
    white-space: pre-wrap !important;
    /* word-break: break-all; */
    width: max-content;
    max-width: 300px;
}
.lindy-tooltip-reverse:after {
    transform: translate3d(-10px, 0, 0) scaleX(-1) !important;
    right: -4px;
}
.lindy-tooltip-reverse.lindy-fade:hover:before {
    transform: translate3d(0, 0, 0) !important;
}
.lindy-tooltip-reverse.lindy-fade:hover:after {
    transform: translate3d(0, 0, 0) scaleX(-1) !important;
}

.lindy-theme-popup-container {
    position: relative;
}

/* popup box */
.lindy-theme-popup {
    position: absolute;
    top: -5px;
    right: calc(100% + 10px);
    width: 130px;
    z-index: 300;

    background-color: var(--background-color);
    color: #9ca3af;
    border-radius: 5px;
    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
    cursor: auto;

    visibility: hidden;
    opacity: 0;
    transform: translate3d(10px, 0, 0);
    transition: transform 0.15s ease-in, opacity 0.15s ease-in;
}
.lindy-theme-popup-container:hover > .lindy-theme-popup {
    visibility: visible;
    opacity: 1;
    transform: translate3d(0, 0, 0);
}

/* row with plus and minus buttons */
.lindy-plusminus {
    display: flex;
}
.lindy-theme-popup-row-spacer {
    border-top: 2px solid #f3f4f6;
}

/* individual buttons */
.lindy-plusminus > div {
    width: 100%;
    height: 40px;

    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    font-size: 20px;
    font-weight: 700;
}
.lindy-plusminus:first-child > div:first-child {
    border-top-left-radius: 5px;
}
.lindy-plusminus:first-child > div:last-child {
    border-top-right-radius: 5px;
}
.lindy-plusminus:last-child > div:first-child {
    border-bottom-left-radius: 5px;
}
.lindy-plusminus:last-child > div:last-child {
    border-bottom-right-radius: 5px;
}
.lindy-plusminus > div:hover > svg {
    color: #4b5563 !important;
}
.lindy-plusminus > div:hover {
    background-color: #f9fafb;
}

.lindy-theme-row {
    display: flex;
    align-items: center;
    justify-content: space-between;

    height: 40px;
    gap: 8px;
    margin: 0 8px;
}
.lindy-theme-row > div {
    flex-grow: 1;
}
.lindy-theme-button {
    height: 20px;

    border: 2.5px solid #f3f4f6;
    border-radius: 5px;
    box-sizing: content-box !important;
    cursor: pointer;
}
.lindy-theme-button:hover {
    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
}
.lindy-active-theme {
    border: 2.5px solid var(--color-muted);
}
#lindy-auto-theme-button {
    background: var(--lindy-auto-background-color);
    position: relative;
}
#lindy-auto-theme-button > svg {
    position: absolute;
    top: 3px;
    left: 6px;

    width: 14px;
}
#lindy-white-theme-button {
    background-color: white;
}
#lindy-sepia-theme-button {
    background-color: #f4ecd8;
}
#lindy-dark-theme-button {
    background-color: #212121;
}

/* popup arrow */
.lindy-theme-popup:before {
    /* arrow */
    position: absolute;
    top: 10px;
    right: -8px;
    height: 0;
    width: 0;
    content: "";

    border-top: 8px solid transparent;
    border-bottom: 8px solid transparent;
    border-left: 8px solid var(--background-color);
}
/* spacer under arrow to avoid breaking hover state */
.lindy-theme-popup-container:hover:before {
    position: absolute;
    top: 0;
    right: 0;

    display: block;
    content: "";
    width: 200%;
    height: 300%;
    cursor: auto;
}

#lindy-info-topleft {
    position: fixed;
    top: 0;
    left: 0;
    /* margin inside iframe to render shadow */
    height: calc(100vh - 10px);
    user-select: none;

    width: 400px;
    max-width: calc((100vw - var(--lindy-pagewidth)) / 2 - 5px);

    transition: all 0.2s cubic-bezier(0.16, 1, 0.3, 1);
    animation: fadeInOutline 0.2s cubic-bezier(0.16, 1, 0.3, 1);
    animation-delay: 0s;
    animation-fill-mode: both;
}
@keyframes fadeInOutline {
    from {
        visibility: hidden;
        opacity: 0;
        transform: translate3d(-200px, 0, 0);
    }
    to {
        visibility: visible;
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}
#lindy-info-topleft.lindy-overlay-fadeout {
    visibility: hidden;
    opacity: 0;
    transform: translate3d(-200px, 0, 0);
    animation: none;
}
@media (max-width: 1200px) {
    #lindy-info-topleft {
        display: none;
    }
}

#lindy-crowd-icon {
    width: 22px;
}
#lindy-annotations-icon {
    width: 23px;
    margin: 2px 0;
    margin-left: -1px;
}

